crates/knok/tests/ui/linalg_trace_rect.stderr
error: trace diagonal dimensions must match, got 2 and 3
 --> tests/ui/linalg_trace_rect.rs:3:1
  |
3 | #[knok::graph(backend = Backend::LlvmCpu)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `knok::graph` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `knok::prelude::*`
 --> tests/ui/linalg_trace_rect.rs:1:5
  |
1 | use knok::prelude::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
